unpackaged/main/default/objects/Coupon__c/fields/Consumed_quantity__c.field-meta.xml
<CustomField>
    <fullName>Consumed_quantity__c</fullName>
    <label>Consumed quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>