unpackaged/main/default/objects/Coupon__c/fields/Is_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Is_Consumed__c</fullName>
    <formula>(quantity__c -  Consumed_quantity__c) &lt;= 0</formula>
    <label>Is Consumed</label>
    <type>Checkbox</type>
</CustomField>