unpackaged/main/default/objects/Coupon__c/validationRules/Coupon_consumed.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_consumed</fullName>
    <active>true</active>
    <description>Coupon consumed</description>
    <errorConditionFormula>(quantity__c - Consumed_quantity__c) &lt; 0</errorConditionFormula>
    <errorMessage>Availed coupon limit crossed</errorMessage>
</ValidationRule>