unpackaged/main/default/objects/Coupon__c/validationRules/Unique_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_Name</fullName>
    <active>true</active>
    <description>Coupon code should be unique</description>
    <errorConditionFormula>AND(NOT(ISBLANK(VLOOKUP($ObjectType.Coupon__c.Fields.Name,$ObjectType.Coupon__c.Fields.Name,Name))),  OR(ISNEW(), ISCHANGED(Name)) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Coupon code should be unique</errorMessage>
</ValidationRule>