unpackaged/main/default/objects/Coupon__c/listViews/active_promo_codes.listView-meta.xml
<ListView>
    <fullName>active_promo_codes</fullName>
    <columns>NAME</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>Discount__c</columns>
    <columns>Type__c</columns>
    <columns>Consumed_quantity__c</columns>
    <columns>quantity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Valid_To__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Active Promotional Codes</label>
</ListView>