unpackaged/main/default/objects/Coupon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Consumed_quantity__c</columns>
    <columns>Discount__c</columns>
    <columns>quantity__c</columns>
    <columns>Type__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>